add logo and default screen images

--- a/velibnroses/velibnroses/Velib N' Roses-Info.plist
+++ b/velibnroses/velibnroses/Velib N' Roses-Info.plist
@@ -13,7 +13,10 @@
 		<key>CFBundlePrimaryIcon</key>
 		<dict>
 			<key>CFBundleIconFiles</key>
-			<array/>
+			<array>
+				<string>Logo.png</string>
+				<string>Logo@2x.png</string>
+			</array>
 		</dict>
 	</dict>
 	<key>CFBundleIdentifier</key>
