--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 velibnroses/Velib N' Roses.xcodeproj/xcuserdata
 velibnroses/Velib N' Roses.xcodeproj/project.xcworkspace/xcuserdata
 velibnroses/OneBike.xcodeproj/project.xcworkspace/xcuserdata/s.balard.xcuserdatad
+Keys.h
