--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
 .DS_Store
-velibnroses/Velib N' Roses.xcodeproj/xcuserdata
-velibnroses/Velib N' Roses.xcodeproj/project.xcworkspace/xcuserdata
-velibnroses/OneBike.xcodeproj/project.xcworkspace/xcuserdata/s.balard.xcuserdatad
+velibnroses/OneBike.xcodeproj/xcuserdata
+velibnroses/OneBike.xcodeproj/project.xcworkspace/xcuserdata
 Keys.h
