prepare for AppStore

--- a/velibnroses/velibnroses/OneBike-Info.plist
+++ b/velibnroses/velibnroses/OneBike-Info.plist
@@ -4,8 +4,6 @@
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
-	<key>UIViewControllerBasedStatusBarAppearance</key>
-	<false/>
 	<key>CFBundleDisplayName</key>
 	<string>${PRODUCT_NAME}</string>
 	<key>CFBundleExecutable</key>
@@ -16,6 +14,10 @@
 		<dict>
 			<key>CFBundleIconFiles</key>
 			<array>
+				<string>Logo80</string>
+				<string>Logo58</string>
+				<string>Logo29</string>
+				<string>Logo120</string>
 				<string>Logo.png</string>
 				<string>Logo@2x.png</string>
 			</array>
@@ -47,5 +49,7 @@
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
+	<key>UIViewControllerBasedStatusBarAppearance</key>
+	<false/>
 </dict>
 </plist>
